# image-to-ascii-hs

./: .gitignore  Image-to-ASCII.cabal  README.md  main.hs
app/: Main.hs
