cabal-version:      3.8
name:               Image-to-ASCII
version:            0.1.0.0
synopsis:           Image to ASCII art converter
description:        This is a tool that converts images to ASCII art in the terminal.
license:            NONE
author:             Kojo Bailey
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable Image-to-ASCII
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
        JuicyPixels,
        vector
    hs-source-dirs:   app
    default-language: Haskell2010